--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "author": "Dominic Barnes <dominic@dbarnes.info>",
   "license": "MIT",
   "dependencies": {
-    "lodash": "~0.8.2"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "should": "~1.2.0"
+    "mocha": "^10.0.0",
+    "should": "^13.2.3"
   }
 }
